# HyperSwarmAgents

./: .gitignore  LICENSE  README.md  TESTING.md  pyproject.toml
examples/four-instances/: config.toml
hyperswarm/: __init__.py  cli.py
hyperswarm/core/: __init__.py  entry.py  host.py  scope.py  source.py  store.py  sync.py
hyperswarm/reflectors/: __init__.py  openclaw_session.py
hyperswarm/scopes/: __init__.py  git_remote.py  path_prefix.py
hyperswarm/sources/: __init__.py  claude_code.py  claude_harness.py  codex.py  openclaw.py  openclaw_runs.py
hyperswarm/stores/: __init__.py  markdown.py
hyperswarm/syncs/: __init__.py  rsync_ssh.py
hyperswarm/tuners/: __init__.py  gguf_export.py  lora_local.py  lora_mlx.py  openai_finetune.py  openclaw_corpus.py
hyperswarm/watchers/: __init__.py  openclaw_sessions.py
tests/: test_claude_code_source.py  test_claude_harness_source.py  test_cli_capture.py  test_codex_source.py  test_entry_roundtrip.py  test_gguf_export.py  test_git_remote_scope.py  test_host_identity.py  test_lora_local.py  test_lora_mlx.py  test_markdown_store.py  test_openai_finetune.py  test_openclaw_runs_source.py  test_openclaw_session_reflector.py  test_openclaw_session_watcher.py  test_openclaw_source.py  test_openclaw_tune_corpus.py  test_path_prefix_scope.py  test_rsync_ssh_sync.py
